2000-10-24  Richard Braakman  <dark@wapit.com>

	* gwlib/octstr.c: Add support for formats u, o, x, and X.
	(test_cimd2 needs X.)

	* test/test_cimd2.c: Fix errors in octstr_format calls.

2000-10-24  Richard Braakman  <dark@wapit.com>

	* wmlscript/wsstdlib.c: Corrected "Phonebook" to "PhoneBook".

2000-10-24  Kalle Marjola  <rpr@wapit.com>

	* doc/userguide/userguide.xml: filled SMPP smsc group fields,
	thanks for Mikael Gueck for patch.

2000-10-24  Lars Wirzenius  <liw@iki.fi>

	* Finished first phase of reducing the number of threads
	doing HTTP requests. This phase implements a new interface
	(http_start_request and http_receive_response, with the http_get
	and http_post functions being wrappers around these). The
	goal is to have a static number of threads, internal to the
	HTTP implementation, doing all HTTP requests at once, instead
	of having a new thread for each HTTP request. This phase makes
	that happen, but is implemented so that HTTP requests are done
	serially, not in parallel. The next phase is to re-write the I/O
	parts of the HTTP implementation so that HTTP requests are done
	in parallel once again, using the conn.c module.
	
	* gwlib/http.[ch]: Many internal changes.
	
	* test/test_http.c: Use the new interface, instead of the
	http_get wrapper.

2000-10-24  Kalle Marjola  <rpr@wapit.com>

	* gw/urltrans.c: oops, forgot to switch reservations

2000-10-24  Kalle Marjola  <rpr@wapit.com>

	* gw/urltrans.c: added missing (disappeared?) room reservation for
	%q and %Q in get_pattern, and added note why sender and receiver
	is switched. Thanks for Juho-Pekka Virolainen for noticing this.

2000-10-24  Yann Muller  <ymuller@3glab.com>

	* gw/smsc_at.c: Added support for Falcom A2D modem, thanks to
	Mike Gaertner. Also changed the default protocol identifier
	and coding scheme. Preliminary support for Nokia 7110 as SMSC.
	
2000-10-23  Lars Wirzenius  <liw@iki.fi>

	* gwlib/gwmem.h, gwlib/protected.h: Wrote macros to make it